--- a/packages/snappy-site/src/app/components/Login.module.css
+++ b/packages/snappy-site/src/app/components/Login.module.css
@@ -10,8 +10,8 @@
 }
 
 .checkbox {
-  width: 1.125rem;
-  height: 1.125rem;
+  width: var(--space-5);
+  height: var(--space-5);
   accent-color: var(--color-accent);
   cursor: pointer;
 }
