--- a/packages/snappy-site/src/site/components/Section.module.css
+++ b/packages/snappy-site/src/site/components/Section.module.css
@@ -1,6 +1,6 @@
 .section {
   padding-block: var(--space-8);
-  scroll-margin-top: 4rem;
+  scroll-margin-top: var(--space-16);
 }
 
 @media (width <= 640px) {
