--- a/packages/snappy-site/src/site/components/Steps.module.css
+++ b/packages/snappy-site/src/site/components/Steps.module.css
@@ -5,8 +5,8 @@
 
 .timeline::before {
   position: absolute;
-  inset-block: 0.75rem;
-  inset-inline-start: 1.125rem;
+  inset-block: var(--space-3);
+  inset-inline-start: var(--space-10);
   width: 2px;
   content: "";
   background: var(--color-border);
@@ -22,8 +22,8 @@
 
 .steps li {
   position: relative;
-  padding-block-start: 0.25rem;
-  padding-inline-start: var(--space-5);
+  padding-block-start: var(--space-1);
+  padding-inline-start: var(--space-6);
   margin: var(--space-4) 0;
 }
 
@@ -33,13 +33,13 @@
 
 .steps li::before {
   position: absolute;
-  inset-inline-start: calc(-1 * var(--space-10) + 0.375rem);
+  inset-inline-start: calc(-1 * var(--space-4));
   z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 1.75rem;
-  height: 1.75rem;
+  width: var(--space-8);
+  height: var(--space-8);
   font-size: var(--text-sm);
   font-weight: var(--weight-bold);
   line-height: 1;
